--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Sergi Curtu</a>
+          <a class="navbar-brand" href="#">Aina Mena</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -47,10 +47,10 @@
 
       <div class="starter-template">
         <h1><br>Bevinguts !</h1>
-        <p class="lead">a la meva pàgina web personal </p>
+        <p class="lead">a la meva pàgina web personal de l'assignatura d'informàtica dfe 4t d'ESO</p>
         <p>
             <br> 
-            de l'assignatura d'informàtica dfe 4t d'ESO
+            Espero que us agradi
         </p>
       </div>
 
