--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1><br>Bevinguts !</h1>
+        <h1><br>Benvinguts !</h1>
         <p class="lead">a la meva pàgina web personal de l'assignatura d'informàtica dfe 4t d'ESO</p>
         <p>
             <br> 
