--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="starter-template">
         <h1><br>Benvinguts !</h1>
-        <p class="lead">a la meva pàgina web personal de l'assignatura d'informàtica dfe 4t d'ESO</p>
+        <p class="lead">a la meva pàgina web personal de l'assignatura d'informàtica de 4t d'ESO</p>
         <p>
             <br> 
             Espero que us agradi
